Fix overlap on bulk action

--- a/src/scss/recit/_moodle-override.scss
+++ b/src/scss/recit/_moodle-override.scss
@@ -167,16 +167,6 @@ nav.navbar ul.navbar-nav .popover-region .popover-region-toggle{line-height: nor
     }
 }
 
-@media (min-width: 768px){
-.activity-item:not(.activityinline) {
-    padding: 0.5rem 1.5rem;
-    .activityiconcontainer {
-        width: 40px;
-        height: 40px;
-    }
-}
-}
-
 body.bulkenabled{
     #region-main{
         padding-left: 2rem; // fix to display checkbox on Moodle 4.3 - bulk actions
